outputs_20260331-062313-b0be7ec0/codegen/production/build_logs/compiler_stderr.log
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c: In function 'interruptGtmAtom':
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c:67:5: error: implicit declaration of function 'IfxPort_togglePin' [-Wimplicit-function-declaration]
   67 |     IfxPort_togglePin(LED);
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c:49:43: error: 'IfxGtm_TOM1_2_TOUT12_P00_3_OUT' undeclared (first use in this function)
   49 | #define PHASE_U_HS                       &IfxGtm_TOM1_2_TOUT12_P00_3_OUT  /* U: TOM1 CH2 → P00.3 */
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c:103:62: note: in expansion of macro 'PHASE_U_HS'
  103 |     output[0].pin                    = (IfxGtm_Pwm_ToutMap *)PHASE_U_HS;
      |                                                              ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c:49:43: note: each undeclared identifier is reported only once for each function it appears in
   49 | #define PHASE_U_HS                       &IfxGtm_TOM1_2_TOUT12_P00_3_OUT  /* U: TOM1 CH2 → P00.3 */
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c:103:62: note: in expansion of macro 'PHASE_U_HS'
  103 |     output[0].pin                    = (IfxGtm_Pwm_ToutMap *)PHASE_U_HS;
      |                                                              ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c:50:43: error: 'IfxGtm_TOM1_4_TOUT14_P00_5_OUT' undeclared (first use in this function)
   50 | #define PHASE_V_HS                       &IfxGtm_TOM1_4_TOUT14_P00_5_OUT  /* V: TOM1 CH4 → P00.5 */
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c:111:62: note: in expansion of macro 'PHASE_V_HS'
  111 |     output[1].pin                    = (IfxGtm_Pwm_ToutMap *)PHASE_V_HS;
      |                                                              ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c:51:43: error: 'IfxGtm_TOM1_6_TOUT16_P00_7_OUT' undeclared (first use in this function)
   51 | #define PHASE_W_HS                       &IfxGtm_TOM1_6_TOUT16_P00_7_OUT  /* W: TOM1 CH6 → P00.7 */
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c:119:62: note: in expansion of macro 'PHASE_W_HS'
  119 |     output[2].pin                    = (IfxGtm_Pwm_ToutMap *)PHASE_W_HS;
      |                                                              ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ksnzbjfo\src\gtm_tom_3_phase_inverter_pwm.c:198:5: error: implicit declaration of function 'IfxPort_setPinModeOutput' [-Wimplicit-function-declaration]
  198 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
